# SlackBotRust

./: .gitignore  Cargo.toml  cloudformation.yml  deploy.sh
src/: insult.rs  main.rs
