[package]
name = "slack_bot_rust"
version = "0.1.0"
authors = ["Brian Shaginaw <bshaginaw120@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.3"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
rand = "0.8"
tokio = { version = "1.5.0", features = ["full"] }
hyper = "0.14"
openssl = {version = "0.10.28", features = ["vendored"]}
hyper-openssl = "0.9.1"
openssl-probe = "0.1.4"
