[package]
name = "slack_bot_rust"
version = "0.1.0"
authors = ["Brian Shaginaw <bshaginaw120@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-openssl = "0.9.1"
lambda_runtime = "0.3"
log = "^0.4"
openssl = {version = "0.10.28", features = ["vendored"]}
openssl-probe = "0.1.4"
rand = "0.8"
regex = "1.5"
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
simple_logger = "^1"
tokio = { version = "1.5.0", features = ["full"] }
